# models/auth.go
@@ -1,0 +1,12 @@
+package models
+
+// LoginModel ...
+type LoginModel struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+// TokenResponse...
+type TokenResponse struct {
+	Token string `json:"token"`
+}
